[package]
name = "site-recon"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
easy-scraper = "0.2.0"
reqwest = "0.11.3"
tokio = { version = "1.6.1", features = ["full"] }
async-trait = "0.1.50"
chrono = "0.4.19"